--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 }
 
 dependencies {
     implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
+    implementation 'com.github.wendykierp:JTransforms:3.1'
 
     // RxJava is also required.
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    compile files('libs/jblas-1.2.4.jar')
 }
